refactor: unify Android device management
- Remove separate quest-video.js tool
- Keep only unified adb-manager.js for all Android devices
- Update default config to generic Android device instead of Quest-specific
- Simplify build scripts to focus on single executable
- Update documentation to reflect unified approach

--- a/src/package.json
+++ b/src/package.json
@@ -20,10 +20,9 @@
   "main": "adb-manager.js",
   "scripts": {
     "start": "node adb-manager.js",
-    "quest": "node quest-video.js",
-    "build:win": "pkg quest-video.js -t node18-win-x64 -o ../exe/quest-video.exe && pkg adb-manager.js -t node18-win-x64 -o ../exe/adb-manager.exe",
-    "build:macos": "pkg quest-video.js -t node18-macos-x64 -o ../exe/quest-video-macos && pkg adb-manager.js -t node18-macos-x64 -o ../exe/adb-manager-macos",
-    "build:linux": "pkg quest-video.js -t node18-linux-x64 -o ../exe/quest-video-linux && pkg adb-manager.js -t node18-linux-x64 -o ../exe/adb-manager-linux",
+    "build:win": "pkg adb-manager.js -t node18-win-x64 -o ../exe/easyadb.exe",
+    "build:macos": "pkg adb-manager.js -t node18-macos-x64 -o ../exe/easyadb-macos",
+    "build:linux": "pkg adb-manager.js -t node18-linux-x64 -o ../exe/easyadb-linux",
     "build:all": "npm run build:win && npm run build:macos && npm run build:linux"
   },
   "pkg": {
