--- a/src/lib/config/config.default.json
+++ b/src/lib/config/config.default.json
@@ -21,22 +21,22 @@
   },
   "presets": {
     "MetaQuest3_Videos": {
-      "name": "Meta Quest 3 录屏",
+      "name": "Meta Quest 3 Videos",
       "remotePath": "/sdcard/oculus/VideoShots",
       "fileExtensions": [".mp4"]
     },
     "MetaQuest3_Screenshots": {
-      "name": "Meta Quest 3 截图",
+      "name": "Meta Quest 3 Screenshots",
       "remotePath": "/sdcard/oculus/Screenshots",
       "fileExtensions": [".jpg", ".png"]
     },
     "Android_DCIM": {
-      "name": "安卓相册",
+      "name": "Android Camera",
       "remotePath": "/sdcard/DCIM/Camera",
       "fileExtensions": [".jpg", ".png", ".mp4"]
     },
     "Android_Download": {
-      "name": "安卓下载",
+      "name": "Android Download",
       "remotePath": "/sdcard/Download",
       "fileExtensions": ["*"]
     }
