fix: complete i18n translation coverage
- Fix all remaining hardcoded Chinese text in UI
- Add missing translation keys for cleanup options
- Translate all menu options and confirmation dialogs
- Complete device name localization to English
- Fix settings menu labels to use i18n translations
- Add translations for file list operations and device switching

--- a/src/lib/config/config.json
+++ b/src/lib/config/config.json
@@ -5,11 +5,10 @@
     "author": "一只大菜狗"
   },
   "device": {
-    "name": "Meta Quest 3 Screenshots",
-    "remotePath": "/sdcard/oculus/Screenshots",
+    "name": "Android Download",
+    "remotePath": "/sdcard/Download",
     "fileExtensions": [
-      ".jpg",
-      ".png"
+      "*"
     ]
   },
   "import": {
@@ -22,7 +21,7 @@
     "extractAppNameFromFilename": true,
     "appNameSegments": 2
   },
-  "language": "en",
+  "language": "zh",
   "presets": {
     "MetaQuest3_Videos": {
       "name": "Meta Quest 3 Videos",
