feat: menu rebuild

--- a/src/lib/config/config.default.json
+++ b/src/lib/config/config.default.json
@@ -19,6 +19,7 @@
     "extractAppNameFromFilename": true,
     "appNameSegments": 2
   },
+  "lastUsedDevice": null,
   "presets": {
     "MetaQuest3_Videos": {
       "name": "Meta Quest 3 Videos",
