feat: build package

--- a/src/package.json
+++ b/src/package.json
@@ -20,9 +20,9 @@
   "main": "adb-manager.js",
   "scripts": {
     "start": "node adb-manager.js",
-    "build:win": "pkg adb-manager.js -t node18-win-x64 -o ../exe/easyadb.exe",
-    "build:macos": "pkg adb-manager.js -t node18-macos-x64 -o ../exe/easyadb-macos",
-    "build:linux": "pkg adb-manager.js -t node18-linux-x64 -o ../exe/easyadb-linux",
+    "build:win": "pkg adb-manager.js -t node18-win-x64 -o ../exe/EasyAdb.exe",
+    "build:macos": "pkg adb-manager.js -t node18-macos-x64 -o ../exe/EasyAdb-macos",
+    "build:linux": "pkg adb-manager.js -t node18-linux-x64 -o ../exe/EasyAdb-linux",
     "build:all": "npm run build:win && npm run build:macos && npm run build:linux"
   },
   "pkg": {
